--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   responsive_framework: ^1.4.0
   lottie: ^3.1.2
   syncfusion_flutter_datepicker: "26.1.35"
+  flutter_cupertino_datetime_picker: ^3.0.0
 
   #local storage
   shared_preferences: ^2.2.2
